--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "@headlessui/vue": "^1.7.14",
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.4.0",
     "vue": "^3.2.47",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
