--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.4.0",
+    "chart.js": "^3.9.1",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
